--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           </div>
           <ul class="right-nav flex">
             <li>
-              <a href="/Get Started/introduction.html">Docs</a>
+              <a href="">Docs</a>
             </li>
           </ul>
         </nav>
