Fix: Modified styling and responsivity

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           </div>
           <ul class="right-nav flex">
             <li>
-              <a href="">Docs</a>
+              <a href="#">Docs</a>
             </li>
           </ul>
         </nav>
