Feat: Added Button Components

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="./assets/svg/newLogo.svg" />
-    <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="/css/base.css" />
     <title>Shore UI</title>
   </head>
@@ -20,7 +19,7 @@
           </div>
           <ul class="right-nav flex">
             <li>
-              <a href="#">Docs</a>
+              <a href="/components/alert/alert.html">Docs</a>
             </li>
           </ul>
         </nav>
@@ -35,16 +34,20 @@
         <div class="my-5 py-5">
           <h1 class="head my-5">Styling made easier.</h1>
           <p class="subhead my-5">
-            Shore UI - a component library built using HTML and CSS to help you
-            make website easily and quickly.
+            Shore UI - a reliable component library built using HTML and CSS to
+            help you make website easily and quickly.
           </p>
-          <div class="twin-button flex flex-items-center justify-center">
-            <a href="" class="m-4 p-4"> Get Started </a>
+          <div class="flex flex-items-center justify-center">
             <a
-              class="m-5 p-5"
+              class="btn primary-btn m-4 p-4"
+              href="/components/alert/alert.html"
+            >
+              Get Started
+            </a>
+            <a
+              class="btn secondary-outline m-5 p-5"
               href="https://github.com/shuntzhere/ShoreUI"
               target="_blank"
-              class="btn btn-secondary"
               >GitHub</a
             >
           </div>
