--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <main class="flex justify-center flex-items-center">
         <div class="bg-video">
           <video class="bg-video__content" autoplay muted loop>
-            <source src="./assets/videos/shore.mp4" type="video/mp4" />
+            <source src="./assets/videos/video.mp4" type="video/mp4" />
           </video>
         </div>
         <div class="my-5 py-5">
@@ -38,10 +38,7 @@
             help you make website easily and quickly.
           </p>
           <div class="flex flex-items-center justify-center">
-            <a
-              class="btn primary-btn m-4 p-4"
-              href="/components/alert/alert.html"
-            >
+            <a class="btn primary-btn m-4 p-4" href="/installation.html">
               Get Started
             </a>
             <a
