Fix: Updated link and descriptions

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           </div>
           <ul class="right-nav flex">
             <li>
-              <a href="/components/alert/alert.html">Docs</a>
+              <a href="/installation.html">Docs</a>
             </li>
           </ul>
         </nav>
@@ -35,14 +35,15 @@
           <h1 class="head my-5">Styling made easier.</h1>
           <p class="subhead my-5">
             Shore UI - a reliable component library built using HTML and CSS to
-            help you make website easily and quickly.
+            help you make apps rapidly using our responsive, reusable
+            components.
           </p>
           <div class="flex flex-items-center justify-center">
             <a class="btn primary-btn m-4 p-4" href="/installation.html">
-              Get Started
+              Dive In!
             </a>
             <a
-              class="btn secondary-outline m-5 p-5"
+              class="btn secondary-outline m-4 p-4"
               href="https://github.com/shuntzhere/ShoreUI"
               target="_blank"
               >GitHub</a
