--- a/installation.html
+++ b/installation.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/base.css" />
-    <title>Installation</title>
+    <title>Installation | Shore UI</title>
   </head>
   <body>
     <div class="container">
@@ -13,12 +13,15 @@
         <nav>
           <div class="left-nav flex flex-items-center justify-between">
             <img class="hamburger" src="/assets/svg/hamburger-solid.svg" />
-            <a href="../../../index.html">
+            <a href="/index.html">
               <img class="logo flex-grow" src="/assets/svg/logo.svg" />
             </a>
-            <a class="right-nav flex" href="#">Docs</a>
+            <a
+              class="right-nav flex"
+              href="https://github.com/shuntzhere/Shore-UI"
+              >Github</a
+            >
           </div>
-          <!-- <div></div> -->
         </nav>
       </div>
 
@@ -27,7 +30,7 @@
           <!-- Installation Page -->
           <div>
             <div class="list-topic">
-              <a href="/Get Started/installation.html"> Installation </a>
+              <a href="/installation.html"> Installation </a>
             </div>
           </div>
 
@@ -49,8 +52,12 @@
               <li>
                 <a href="/Components/button/button.html"> Button </a>
               </li>
+
               <li>
                 <a href="/Components/card/card.html"> Card </a>
+              </li>
+              <li>
+                <a href="/components/grid/grid.html"> Grid </a>
               </li>
               <li>
                 <a href="/Components/image/image.html"> Image </a>
@@ -62,10 +69,21 @@
                 <a href="/Components/list/list.html"> List </a>
               </li>
               <li>
+                <a href="/Components/modal/modal.html"> Modal </a>
+              </li>
+              <li>
                 <a href="/Components/navbar/navbar.html"> Navbar </a>
               </li>
               <li>
+                <a href="/Components/rating/rating.html"> Rating </a>
+              </li>
+              <li>
                 <a href="/Components/snackbar/snackbar.html"> Snackbar </a>
+              </li>
+              <li>
+                <a href="/Components/typography/typography.html">
+                  Typography
+                </a>
               </li>
             </ul>
           </div>
@@ -75,24 +93,19 @@
           <div class="content-title mb-4">Installation</div>
           <div class="content-subtitle">
             Use the following link to import this component library to build
-            your products quickly. Just copy this in your css file and you are
-            good to go.
+            your products. Just copy this in your css file and you are good to
+            go.
           </div>
 
           <div class="divider"></div>
 
-          <iframe
-            src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=seti&wt=none&l=css&width=1000&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=false&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%2540import%2520url%28%2522shoreui.netlify.app%252Fcss%252Fbase.css%2522%29%253B"
-            style="
-              width: 1000px;
-              height: 189px;
-              border: 0;
-              transform: scale(1);
-              overflow: hidden;
-            "
-            sandbox="allow-scripts allow-same-origin"
-          >
-          </iframe>
+          <div class="iframe-container">
+            <iframe
+              src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=seti&wt=none&l=css&width=1000&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%2540import%2520url%28%2522shoreui.netlify.app%252Fcss%252Fbase.css%2522%29%253B"
+              sandbox="allow-scripts allow-same-origin"
+            >
+            </iframe>
+          </div>
         </div>
       </div>
     </div>
